--- a/index.html
+++ b/index.html
@@ -523,7 +523,6 @@
         <h3 data-aos="zoom-in-up">
           آفاق ..الوجهة الأولى لإدارة الفعاليات الصحية
         </h3>
-        <p>&#169; AFAQ 2023. All rights reserved</p>
       </div>
     </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
@@ -548,5 +547,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PKGFNQK"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+<footer style="width: 100%; background-color: #000; color: #fff; text-align: center; padding: 20px 10px; font-size: 16px;">
+  صُنع بكل حب من 
+  <a href="https://dwal.sa" target="_blank" style="color: #fff; font-weight: bold; text-decoration: underline;">
+    دوال للتسويق
+  </a>
+  <span style="display:inline-block; color:#e25555; animation: heartbeat 1s infinite ease-in-out;">❤</span>
+</footer>
+
+<style>
+@keyframes heartbeat {
+  0%   { transform: scale(1); }
+  14%  { transform: scale(1.3); }
+  28%  { transform: scale(1); }
+  42%  { transform: scale(1.3); }
+  70%  { transform: scale(1); }
+}
+</style>
   </body>
 </html>
