--- a/index.html
+++ b/index.html
@@ -527,7 +527,6 @@
     </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      // Settings that can be overridden on per-element basis, by `data-aos-*` attributes:
       AOS.init({
         offset: 120,
         delay: 0,
@@ -543,16 +542,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-PKGFNQK');</script>
 <!-- End Google Tag Manager -->
-<!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PKGFNQK"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-<footer style="width: 100%; background-color: #000; color: #fff; text-align: center; padding: 20px 10px; font-size: 16px;">
-  صُنع بكل حب من 
-  <a href="https://dwal.sa" target="_blank" style="color: #fff; font-weight: bold; text-decoration: underline;">
-    دوال للتسويق
-  </a>
-  <span style="display:inline-block; color:#e25555; animation: heartbeat 1s infinite ease-in-out;">❤</span>
+
+<footer style="width: 100%; background-color: #000; color: #fff; text-align: center; padding: 20px 10px; font-size: 16px; direction: rtl;">
+  <div style="display: inline-flex; align-items: center; justify-content: center; gap: 5px;">
+    <span style="display:inline-block; color:#e25555; animation: heartbeat 1s infinite ease-in-out;">❤</span>
+    <span>
+      صُنع بكل حب من 
+      <a href="https://dwal.sa" target="_blank" style="color: #fff; font-weight: bold; text-decoration: underline;">
+        دوال للتسويق
+      </a>
+    </span>
+  </div>
 </footer>
 
 <style>
@@ -564,5 +567,5 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   70%  { transform: scale(1); }
 }
 </style>
-  </body>
+</body>
 </html>
